--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -1,4 +1,5 @@
-parameters: {}
+parameters:
+  app.discount_percent: '%env(float:DISCOUNT_PERCENT)%'
 
 services:
   _defaults:
@@ -17,9 +18,11 @@ services:
     resource: '../src/Controller/'
     tags: ['controller.service_arguments']
 
-  App\Domain\Discount\PercentDiscount: ~
+  App\Domain\Discount\:
+    resource: '../src/Domain/Discount/*'
+    tags: ['app.discount_strategy']
 
   App\Domain\FinalPriceCalculator:
     arguments:
-      $strategies:
-        - '@App\Domain\Discount\PercentDiscount'
+      $strategies: !tagged_iterator app.discount_strategy
+      $fallbackDiscount: '%app.discount_percent%'
